Fix navigation spacing

--- a/src/shared/views/navigation/NavigationItem/navigationItem.css
+++ b/src/shared/views/navigation/NavigationItem/navigationItem.css
@@ -18,12 +18,12 @@
   color: #989696;
 }
 
-.linkLi {
+.navigationLink {
   width: 100%;
   max-width: 150px;
 }
 
-.linkDiv {
+.navigationItem {
   width: 100%;
 }
 
